--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
   <body>
     <h1 class="pandemic-start-caption">Pandemic Start:</h1>
-    <div class="start-map"></div>
+    <div class="start"></div>
 
     <h1 class="pandemic-end-caption">Pandemic End:</h1>
-    <div class="end-map"></div>
+    <div class="end"></div>
 
     <h2 class="total"></h2>
     <h2 class="infected"></h2>
